[gd_scene load_steps=3 format=2]

[ext_resource path="res://hud/damage/single_target_damage.tscn" type="PackedScene" id=1]
[ext_resource path="res://hud/damage/multi_target_damage.gd" type="Script" id=2]

[node name="MultiTargetDamage" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="Label" parent="MarginContainer/VBoxContainer/Header" index="0"]
text = "Multi Target Damage"

[node name="Image" parent="MarginContainer/VBoxContainer/HBoxContainer" index="0"]
visible = false

[node name="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer" index="1"]
margin_left = 0.0

[node name="Damage" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer" index="0"]
margin_right = 932.0

[node name="Magical" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer" index="1"]
margin_right = 932.0

[node name="DamageType" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer" index="2"]
margin_right = 932.0

[node name="HSeparator" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer" index="3"]
margin_right = 932.0

[node name="DC" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer" index="4"]
margin_right = 932.0

[node name="SavingThrow" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer" index="5"]
margin_right = 932.0

[node name="ToTake" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer" index="6"]
margin_right = 932.0

[node name="HSeparator2" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer" index="7"]
margin_right = 932.0

[node name="Done" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer" index="8"]
margin_right = 932.0
